--- a/app/src/main/res/layout/table_cell.xml
+++ b/app/src/main/res/layout/table_cell.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="start|top"
+    android:maxWidth="200dp"
     android:padding="8dp"
     android:textColor="@color/text_primary"/>
